src/test/deca/context/invalid/created/void_method_but_value_return/void_method_return_int.deca
// Description:
//		Methode void qui renvoit un entier
// Resultats:
//		Ligne 8 : Return type can't be "void" (3.24)

class A {
	void fonction() {
		return(5);
	}
}
